
\name{NEWS}
\title{News for Package 'surveillance'}
\encoding{latin1}


\section{Changes in surveillance version 1.15.0.9000 (UNRELEASED)}{

\subsection{NEW FEATURES}{
  \itemize{
    \item The \code{as.data.frame()} method for \code{"sts"} objects
    gained a \code{tidy} argument, which enables conversion to the
    long data format and is also available as function \code{tidy.sts()}.
  }
}

\subsection{MINOR CHANGES}{
  \itemize{
    \item Package \CRANpkg{polyCub} is no longer automatically attached
    (just imported).
  }
}

\subsection{BUG FIXES}{
  \itemize{
    \item \code{aggregate(stsObj, by = "unit")} no longer results in
    empty colnames (set to \code{"overall"}).
    The obsolete map is dropped.

    \item The \code{subset} argument of \code{twinSIR()} was partially
    ignored:
    \itemize{
      \item If \code{nIntervals = 1}, the model \code{summary()}
      reported the total number of events.
      \item Automatic \code{knots}, model \code{residuals()}, as well as
      the rug in \code{intensityplot()} were computed from the whole set
      of event times.
    }

    \item The \code{as.epidata.data.frame()} converter did not actually
    allow for latent periods (via \code{tE.col}). This is now possible
    but considered experimental (methods for \code{"epidata"} currently
    ignore latent periods).
  }
}

}
  

\section{Changes in surveillance version 1.15.0 (2017-10-06)}{

\subsection{NEW FEATURES}{
  \itemize{
    \item \code{siaf.gaussian()} now also employs a \code{polyCub.iso()}
    integration routine by default (similar to the powerlaw-type
    kernels), instead of adaptive midpoint cubature.
    This increases precision and considerably accelerates estimation of
    \code{twinstim()} models with a Gaussian spatial interaction
    function. Models fitted with the new default
    (\code{F.adaptive=FALSE, F.method="iso"})
    will likely differ from previous fits (\code{F.adaptive=TRUE}),
    and the numerical difference depends on 